Se muestran detalles del lugar seleccionado, se obtienen mediante peticion. Muestra nombre, imagen y ubicacion en un mapa

--- a/Naturapp/Info.plist
+++ b/Naturapp/Info.plist
@@ -62,5 +62,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Necesitamos acceder a los datos de ubicación</string>
 </dict>
 </plist>
